src/objects/Player__c.object
<CustomObject>
    <fields>
        <fullName>MostPlayedCharacter__c</fullName>
        <label>MostPlayedCharacter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Playable_Characters</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberOfLosses__c</fullName>
        <label>NumberOfLosses</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfWins__c</fullName>
        <label>NumberOfWins</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Rank__c</fullName>
        <label>Overall Rank</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Win_Percentage__c</fullName>
        <formula>NumberOfWins__c / (NumberOfLosses__c + NumberOfWins__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Win Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Player</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NumberOfWins__c</columns>
        <columns>NumberOfLosses__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Gamertag</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>